-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 15.0.0, Qt Creator 16.0.0-beta2
-
None
-
-
746fd23e9 (15.0), 1d7bc2271 (16.0)
After upgrading from Qt Creator 14, it crashed at launch.
Running command line qtcreator -tcs also crashed.
15.0.1 still crashes.
| For Gerrit Dashboard: QTCREATORBUG-32127 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 610032,2 | ProjectExplorer: Add some soft asserts in toolchain factory functions | 15.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |
| 624282,2 | Fix crash when MinGW toolchains are detected on macOS | 16.0 | qt-creator/qt-creator | Status: MERGED | +2 | -1 |